# fake-cli

./: Cargo.toml  LICENSE  README.md
config/: config.json  config.yaml
example/: array.json  basic.json  constant.json  map.json  minimum.json
faker_type_generator/: Cargo.toml
faker_type_generator/src/: main.rs
faker_type_generator/templates/: faker_type.tmpl
src/: cli.rs  error.rs  fake.rs  faker_type.rs  file.rs  main.rs  service.rs
src/fake/: fake_definition.rs  fake_definition_element.rs  fake_type.rs  lang.rs
src/fake/fake_type/: array.rs  boolean.rs  constant.rs  digit.rs  domain_suffix.rs  first_name.rs  free_email_provider.rs  internet.rs  ip.rs  last_name.rs  lorem.rs  map.rs  name.rs  name_with_title.rs  number.rs  number_with_format.rs  paragraph.rs  password.rs  safe_email.rs  sentence.rs  sentences.rs  title.rs  user_agent.rs  word.rs  words.rs
src/fake/fake_type/internet/: free_email.rs  ip_v4.rs  ip_v6.rs  mac_address.rs  username.rs
src/fake/fake_type/lorem/: paragraphs.rs  words.rs
src/fake/fake_type/name/: last_name.rs  name.rs  suffix.rs
src/service/: generate_dummy_data.rs
